// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Test the CategoryForm Component should match snapshot 1`] = `
<Form
  as="form"
  className="modalForm"
  onSubmit={[Function]}
>
  <FormField
    className="formField"
  >
    <input
      name="name"
      onChange={[Function]}
      placeholder="Category Name"
      value="pname"
    />
  </FormField>
  <FormField
    className="formField"
  >
    <input
      name="image_url"
      onChange={[Function]}
      placeholder="Image URL (example:https://exampleimageurl.jpg)"
      typeof="url"
      value="https://i.imgur.com/27DUH5b.jpg"
    />
    <a
      href="https://imgur.com/"
      rel="noopener noreferrer"
      target="_blank"
    >
      Upload image here
    </a>
  </FormField>
  <FormTextArea
    as={[Function]}
    className="formField"
    control={[Function]}
    name="description"
    onChange={[Function]}
    placeholder="Short Description"
    value="admin@mail.com"
  />
  <Button
    as="button"
    type="submit"
  >
    Submit
  </Button>
</Form>
`;

exports[`Test the CategoryForm Component should match snapshot 2`] = `
<Form
  as="form"
  className="modalForm"
  onSubmit={[Function]}
>
  <FormField
    className="formField"
  >
    <input
      name="name"
      onChange={[Function]}
      placeholder="Category Name"
      value="pname"
    />
  </FormField>
  <FormField
    className="formField"
  >
    <input
      name="image_url"
      onChange={[Function]}
      placeholder="Image URL (example:https://exampleimageurl.jpg)"
      typeof="url"
      value=""
    />
    <a
      href="https://imgur.com/"
      rel="noopener noreferrer"
      target="_blank"
    >
      Upload image here
    </a>
  </FormField>
  <FormTextArea
    as={[Function]}
    className="formField"
    control={[Function]}
    name="description"
    onChange={[Function]}
    placeholder="Short Description"
    value=""
  />
  <Button
    as="button"
    type="submit"
  >
    Submit
  </Button>
</Form>
`;
